src/test/deca/syntax/valid/notYetImplemented/test_parser_this.deca
// Description:
//    Minimalistic program to test the use of this in a class.
//
// Results:
//    None
//
// History:
//    Created on 13/1/2025

class Car {
    int immatriculation;
    this.immatriculation = 5;
}
